--- a/secciones/noticias.html
+++ b/secciones/noticias.html
@@ -66,7 +66,16 @@
 
 
     <footer>
+        <div>
+            <ul class="footer_lista">
+                <li><a href="./index.html">INICIO</a></li>
+                <li><a href="./secciones/historia.html">HISTORIA</a></li>
+                <li><a href="./secciones/noticias.html">NOTICIAS</a></li>
+                <li><a href="./secciones/tiendacole.html">TIENDA COLE</a></li>
+                <li><a href="./secciones/socio.html">HACETE SOCIO</a></li>
+            </ul>
 
+        </div>
         <div class="footer_contacto">
             <h3 class="footer_titulo">CONTACTOS:</h3>
             <ul class="footer_redes">
@@ -97,10 +106,11 @@
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105193.90104582623!2d-58.6269453537034!3d-34.52038817923494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb0cca1368699%3A0x2773728d00526d0e!2sEstadio%20Libertarios%20Unidos!5e0!3m2!1ses-419!2sar!4v1673224073441!5m2!1ses-419!2sar"
                 allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <div class="footer_autor">
-            <ul>
-                <li>Hecho por Facundo Cimino.</li>
-                <li><a href="tel:+5491168619757" class="footer_autor">+54 9 11 6861-9757</a></li>
-            </ul>
-        </div>
+
     </footer>
+    <nav class="footer_autor">
+        <ul>
+            <li>Hecho por Facundo Cimino.</li>
+            <li><a href="tel:+5491168619757" class="footer_autor">+54 9 11 6861-9757</a></li>
+        </ul>
+    </nav>
