Cambios en responsive mobile, y mejora de algunos detalles de estilos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Colegiales_arg_logo.png" alt=""
                 class="header_logo">
         </a>
-        <!-- <h3 class="main_titulo">CLUB ATLETICO COLEGIALES</h3> -->
+        <h3 class="main_titulo disabled">CLUB ATLETICO COLEGIALES</h3>
         <nav>
             <ul class="header_lista wow animate__animated animate__pulse">
                 <li>
@@ -53,13 +53,14 @@
             Somos el Club Atletico Colegiales, el club mas grande de Zona Norte. Creados en 1908 fomentamos el
             deporte,
             conoce sobre nuestra historia.
-            <a href="./secciones/historia.html" class="animate__animated animate__pulse">Conoce mas</a>
+            
         </p>
+        <a href="./secciones/historia.html" class="animate__animated animate__pulse">Conoce mas</a>
         <h3 class="noticia1_titulo">ULTIMAS NOTICIAS</h3>
         <div class="main_noticias">
             <div class="noticia1 wow animate__animated animate__bounceIn">
                 <img src="./Imagenes/Captura de pantalla 2023-01-12 183212.png" alt="foto amistoso"
-                    class="noticia1_foto">
+                    class="noticias_foto">
                 <h4 class="noticia1_subtitulo">Amistoso contra libres</h4>
                 <p class="noticia1_texto">El elenco tricolor disputo su primer amistoso del año enfrentandose a un
                     equipo
@@ -68,7 +69,7 @@
             </div>
             <div class="noticia2 wow animate__bounceIn">
                 <img src="./Imagenes/Captura de pantalla 2023-01-12 222030.png" alt="imagen cancha"
-                    class="noticia2_foto">
+                    class="noticias_foto">
                 <h3 class="noticia2_subtitulo">Ultimando detalles</h3>
                 <p class="noticia2_texto">Nos encontramos en la ultima etapa de la construccion de la nueva tribuna.<a
                         href="./secciones/noticias.html">Enterate más.</a></p>
@@ -105,20 +106,6 @@
                         <li>COLEGIALES</li>
                     </ul>
                 </div>
-
-
-
-                <!-- <div class="partidos">PROXIMOS PARTIDOS</div>
-                <div class="versus">VS</div>
-                <div class="cole">COLEGIALES</div>
-                <div class="rival1">ARG. DE MERLO</div>
-                <div class="rival2">ACASSUSO</div>
-                <div class="rival3">TALLERES RDE</div>
-                <div class="rival4">DOCK SUD</div> -->
-
-
-
-
             </div>
 
         </div>
