--- a/secciones/tiendacole.html
+++ b/secciones/tiendacole.html
@@ -54,7 +54,7 @@
 
             <div class="articulo2">
                 <img src="../Imagenes/cole suplente.png" alt="Camiseta suplente"
-                    class="articulos_imagen">
+                    class="articulo2_imagen">
                 <h3 class="articulos_subtitulo">CAMISETA SUPLENTE</h3>
                 <h5 class="articulos_subtitulo2">Caracteristicas</h5>
                 <ol class="articulos_lista">
