Agregando Bootstrap y mejorando Responsive

--- a/secciones/historia.html
+++ b/secciones/historia.html
@@ -1,94 +1,144 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>INICIO</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
+
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+</body>
 
-    <header>
-        <a href="../index.html">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Colegiales_arg_logo.png" alt=""
-                class="header_logo">
-        </a>
-        <nav>
-            <ul class="header_lista">
-                <li>
-                    <a href="../index.html">INICIO</a>
-                </li>
-                <li>
-                    <a href="./historia.html" class="header_lista_act">HISTORIA</a>
-                </li>
-                <li>
-                    <a href="./noticias.html">NOTICIAS</a>
-                </li>
-                <li>
-                    <a href="./tiendacole.html">TIENDA COLE</a>
-                </li>
-                <li>
-                    <a href="./socio.html">HACETE SOCIO</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h1 class="main_titulos">HISTORIA</h1>
-        <img src="https://1.bp.blogspot.com/-L2ED672wp_A/XYqK1oQSrhI/AAAAAAAAsMk/8cZp404cOeYOTjsVU3YaXZjtky5YhqZMQCLcBGAsYHQ/s1600/colegiales%2B88%2Bb.jpg" alt="colehistoria" class="historia_foto">
-        <p class="historia_texto">El Club Atlético Colegiales es un club de fútbol argentino, radicado en el barrio de Munro, partido de Vicente López, provincia de Buenos Aires. Fue fundado el 1 de abril de 1908 bajo el nombre Libertarios Unidos, nombre que actualmente lleva su estadio. Actualmente milita en la Primera B, tercera división para los equipos directamente afiliados a la AFA.El club fue fundado el 1 de abril de 1908, en Libertad y Paseo de Julio (hoy Avenida del Libertador), en el barrio de Retiro, lindero a Recoleta, bajo el nombre de Libertarios Unidos. Esta denominación habría sido escogida en virtud del lugar de fundación (la calle Libertad). Pero, en contraposición, se podría sospechar que la fuente de inspiración bien pudo haber sido los ideales anarquistas de sus fundadores.2​3​ La teoría se fortalece con la elección de los primeros colores: rojo y negro, símbolo de ese movimiento político. Además, entre sus miembros había militantes anarcosindicalistas, libertarios, socialistas y comunistas.2​ La teoría de que haya sido por su ubicación, en la calle Libertad, pudo haber sido una coartada ya que el anarquismo durante esa época estaba completamente prohibido, era perseguido y duramente reprimido.</p>
-        
-    </main>
-
-    <footer>
-        <div>
-            <ul class="footer_lista">
-                <li><a href="./index.html">INICIO</a></li>
-                <li><a href="./secciones/historia.html">HISTORIA</a></li>
-                <li><a href="./secciones/noticias.html">NOTICIAS</a></li>
-                <li><a href="./secciones/tiendacole.html">TIENDA COLE</a></li>
-                <li><a href="./secciones/socio.html">HACETE SOCIO</a></li>
-            </ul>
-
-        </div>
-        <div class="footer_contacto">
-            <h3 class="footer_titulo">CONTACTOS:</h3>
-            <ul class="footer_redes">
-                <li>
-                    <i class="bi bi-envelope-at"></i>
-                    <a href="" target="_blank">GMAIL</a>
-                </li>
-                <li>
-                    <i class="bi bi-whatsapp"></i>
-                    <a href="tel:+54 9 11 4188-2222">WHATSAPP</a>
-                </li>
-                <li>
-                    <i class="bi bi-instagram"></i>
-                    <a href="https://www.instagram.com/cacolegiales/" target="_blank">INSTAGRAM</a>
-                </li>
-                <li>
-                    <i class="bi bi-facebook"></i>
-                    <a href="https://www.facebook.com/colegialesoficial" target="_blank">FACEBOOK</a>
-                </li>
-                <li>
-                    <i class="bi bi-twitter"></i>
-                    <a href="https://twitter.com/facundo_cimino" target="_blank">TWITTER</a>
-                </li>
-            </ul>
-        </div>
-        <div class="footer_maps">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105193.90104582623!2d-58.6269453537034!3d-34.52038817923494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb0cca1368699%3A0x2773728d00526d0e!2sEstadio%20Libertarios%20Unidos!5e0!3m2!1ses-419!2sar!4v1673224073441!5m2!1ses-419!2sar"
-                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-
-    </footer>
-    <nav class="footer_autor">
-        <ul>
-            <li>Hecho por Facundo Cimino.</li>
-            <li><a href="tel:+5491168619757" class="footer_autor">+54 9 11 6861-9757</a></li>
+</html>
+<header>
+    <a href="../index.html">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Colegiales_arg_logo.png" alt=""
+            class="header_logo">
+    </a>
+    <nav>
+        <ul class="header_lista">
+            <li>
+                <a href="../index.html">INICIO</a>
+            </li>
+            <li>
+                <a href="./historia.html" class="header_lista_act">HISTORIA</a>
+            </li>
+            <li>
+                <a href="./noticias.html">NOTICIAS</a>
+            </li>
+            <li>
+                <a href="./tiendacole.html">TIENDA COLE</a>
+            </li>
+            <li>
+                <a href="./socio.html">HACETE SOCIO</a>
+            </li>
         </ul>
     </nav>
+</header>
+
+<main>
+    <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="../Imagenes/2021.jpg" class="d-block w-100" alt="cole2021">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Campeones 2021</h5>
+                    <!-- <p>Some representative placeholder content for the first slide.</p> -->
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="../Imagenes/1993.png" class="d-block " alt="cole1993">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Campeones 1993</h5>
+                    <!-- <p>Some representative placeholder content for the second slide.</p> -->
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="../Imagenes/1988.png" class="d-block w-100" alt="cole1988">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Campeones 1988</h5>
+                    <!-- <p>Some representative placeholder content for the third slide.</p> -->
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+</main>
+
+
+<footer>
+    <div>
+        <ul class="footer_lista">
+            <li><a href="./index.html">INICIO</a></li>
+            <li><a href="./secciones/historia.html">HISTORIA</a></li>
+            <li><a href="./secciones/noticias.html">NOTICIAS</a></li>
+            <li><a href="./secciones/tiendacole.html">TIENDA COLE</a></li>
+            <li><a href="./secciones/socio.html">HACETE SOCIO</a></li>
+        </ul>
+
+    </div>
+    <div class="footer_contacto">
+        <h3 class="footer_titulo">CONTACTOS:</h3>
+        <ul class="footer_redes">
+            <li>
+                <i class="bi bi-envelope-at"></i>
+                <a href="" target="_blank">GMAIL</a>
+            </li>
+            <li>
+                <i class="bi bi-whatsapp"></i>
+                <a href="tel:+54 9 11 4188-2222">WHATSAPP</a>
+            </li>
+            <li>
+                <i class="bi bi-instagram"></i>
+                <a href="https://www.instagram.com/cacolegiales/" target="_blank">INSTAGRAM</a>
+            </li>
+            <li>
+                <i class="bi bi-facebook"></i>
+                <a href="https://www.facebook.com/colegialesoficial" target="_blank">FACEBOOK</a>
+            </li>
+            <li>
+                <i class="bi bi-twitter"></i>
+                <a href="https://twitter.com/facundo_cimino" target="_blank">TWITTER</a>
+            </li>
+        </ul>
+    </div>
+    <div class="footer_maps">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d105193.90104582623!2d-58.6269453537034!3d-34.52038817923494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb0cca1368699%3A0x2773728d00526d0e!2sEstadio%20Libertarios%20Unidos!5e0!3m2!1ses-419!2sar!4v1673224073441!5m2!1ses-419!2sar"
+            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+
+</footer>
+<nav class="footer_autor">
+    <ul>
+        <li>Hecho por Facundo Cimino.</li>
+        <li><a href="tel:+5491168619757" class="footer_autor">+54 9 11 6861-9757</a></li>
+    </ul>
+</nav>
